fix overflow

--- a/cloding-front/src/App.css
+++ b/cloding-front/src/App.css
@@ -95,6 +95,10 @@ p {
   font-weight: 400;  
 }
 
+.overflow {
+  overflow: hidden;
+}
+
 .pageStructure {
   display: flex;
   justify-content: center;
